--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "botframework-directlinejs": "^0.15.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "tesseract.js": "^5.1.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
